@@ -1,4 +1,12 @@
 ================================================
+|                Version 0.6                   |
+|                                              |
+================================================
+- UTF-8 support for languages;
+- Russian translation added;
+- Optimized text render code;
+
+================================================
 |                Version 0.5                   |
 |            Released: 2010-03-23              |
 ================================================
